agrega lorem ipsum

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <main>
         <h1>Brayan loza</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum itaque nihil beatae dolorem, voluptas, quibusdam eaque earum sed hic voluptate assumenda a similique molestiae ducimus at perferendis, obcaecati sit aperiam.</p>
     </main>
 </body>
 
