--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Hola soy Brayan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
