--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <main>
-        <h1>Brayan loza</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum itaque nihil beatae dolorem, voluptas, quibusdam eaque earum sed hic voluptate assumenda a similique molestiae ducimus at perferendis, obcaecati sit aperiam.</p>
-    </main>
+<body> 
+  <div class="info-box">
+  <h2>ChatGPT</h2>
+    <div id="flex-p">  
+      <p class="big"><br>Examples</p>
+      <p class="big"><br>Capabilities</p>
+    <p class="big"><br>Limitations</p>
+    </div> 
+ </div>
 </body>
 
 </html>>
